# llm-workbench

./: .gitignore  HANDOFF_NNSIGHT_ACTIVATION_CAPTURE.md  LOGGING_INTEGRATION.md  NNSIGHT_FOOTGUNS_AND_LESSONS.md  ORACLE_ROLLOUTS_CLEAN.md  TODO_3_AND_7_TESTING_SUMMARY.md  TODO_CODE_REVIEW_CODEX_2025-09-19.md  check_lowest_price.py  check_runpod_schema.py  clean_ssh_keys.py  debug_precision.py  deploy.md  minimal_test.py  nnsight_activation_issue.md  nnsight_debug_notebook.py  puzzle_solver.py  pyproject.toml  response.txt  server_fixed.py  ssh_replacements.txt  test_datasets_import.py  test_log_levels.py  test_nnsight_tutorial.py  todo.md  weight_debug.py
bifrost/: TODO.md  pyproject.toml
bifrost/bifrost/: cli.py  client.py  deploy.py  job_manager.py  jobs_cli.py  ssh_clients_compat.py  types.py
bifrost/tests/: setup_ssh_helper.py  test_bifrost_async.py  test_bifrost_sync.py
broker/: .env  TODO_COLAB.md  pyproject.toml  test_jupyter_setup.py  test_provider_interface.py
broker/broker/: __init__.py  api.py  cli.py  client.py  queries.py  query.py  runpod.py  ssh_clients.py  types.py
broker/broker/providers/: __init__.py  registry.py  runpod.py
broker/broker/utils/: cleanup.py
broker/examples/: basic_workflow.py  client_example.py  simple_example.py  streaming_example.py
broker/src/gpu_broker_minimal/: __init__.py  api.py  cli.py  client.py  queries.py  runpod.py  ssh_clients.py  types.py
broker/tests/: smoke_test.py  test_broker_async.py  test_broker_sync.py  test_full_integration.py  test_provision_until_direct_ssh.py  test_ssh_both_clients.py  test_three_operation_integration.py
broker/tests/deprecated/: smoke_test.py  test_full_integration.py  test_provision_until_direct_ssh.py  test_ssh_both_clients.py  test_three_operation_integration.py
broker/utils/: cleanup.py
data/: arch.md
docs/: dev-shortcuts.md  persona_vectors.md  slime.md
docs/todo/: TODO_CODE_REVIEW_CODEX_2025-09-19.md  todo.md
engine/: README.md  __init__.py  architecture.md  gpt2_inference_smoketest.py  hello_jax.py  pyproject.toml
engine/backends/custom/frameworks/jax/utils/: __init__.py
engine/core/utils/: __init__.py
engine/engine/: __init__.py  noam_naming.md
engine/engine/backends/: __init__.py  base.py
engine/engine/backends/custom/frameworks/jax/utils/: __init__.py  repo_utils.py
engine/engine/backends/interpretability/: __init__.py  activation_collection.py  amplified_sampling.py
engine/engine/backends/vllm/: __init__.py  config.py  engine.py
engine/engine/core/utils/: comparison.py  loader.py  tokenizer.py  weights.py
engine/engine/deployment/: __init__.py  health.py
engine/engine/jax/utils/: repo_utils.py  test_core.py
engine/engine/servers/: __init__.py  openai_compat.py
engine/engine/utils/: weights.py
engine/jax/: gpt2.py
engine/jax/utils/: __init__.py
engine/scripts/: __init__.py  deploy_remote_vllm.py  gpt2_inference_smoketest.py  hello_attn_jax.py  hello_jax.py  simple_vllm_deploy.py  start_vllm_gpt2.py
engine/scripts/deploy/deploy_simple/: __init__.py  simple_nnsight_api.py
engine/scripts/deploy_simple/: interp.py
engine/scripts/deprecated/: start_vllm_gpt2.py
engine/scripts/dev/: compare_jax_gpt2.py  example_jax.md  hello_gpt2_jax.py  hello_gpt2_jax_skeleton.py  hello_jax.py  triton-arch.md
engine/scripts/dev/gpt2_jax/: compare.py  skeleton.py  solution.py
engine/scripts/dev/llama3_jax/: FAITHFUL_IMPLEMENTATION.md  HANDOFF_NEXT_WORK.md  SETUP_INSTRUCTIONS.md  TODO.md  compare.py  compare_faithful.py  llama.txt  notes.md  skeleton.py  solution.py  solution_entropix.py  solution_entropix_faithful.py
engine/scripts/dev/llama3_jax/entropix_code/: FILES_TO_EXTRACT.md
engine/scripts/reference/: deploy_remote_vllm.py  deploy_runpod.sh  gpt2_inference_smoketest.py  hello_world.py  simple_vllm_deploy.py  test_vllm_backend.py
engine/utils/: comparison.py  tokenizer.py  weights.py
examples/deploy_inference_server/: README.md  test_client.py
examples/emotion_prefix_gsm8k/: README.md  deploy_and_evaluate.py  emotion_rollouts.py  remote_runner_rollouts.py
examples/gsm8k_local/: gsm8k_catgirl_prompt.py  gsm8k_rewards.py
examples/gsm8k_nnsight_remote/: GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  REVIVAL_NOTES.md  TESTING.md  check_gpu_memory.py  debug_nnsight_patterns.py  debug_official_patterns.py  (+4 more)
journal/: advice.md  gpt2_notes.md  llm_architecture_notes.md
leyline/: hello.py  pyproject.toml  test_integration.py
leyline/examples/: __init__.py  echo_worker.py  list_worker.py
leyline/leyline/: __init__.py  cli.py  common.py  controller.py  worker_base.py
nano_ndif/: README.md  __init__.py  activation_capture.py  config.py  server.py
rollouts/: GEMINI_INTEGRATION_REPORT.md  README.md  gemini_fix.patch  proposal.md  pyproject.toml
rollouts/docs/: ENVIRONMENT_INTERFACE_PROBLEM.md  PROVIDERS_REFACTOR_GUIDE.md  TODO_FN_SERIALIZE.md  TYPE_CHECKER_TODOS.md  gemini_debug_analysis.md  verifiers_comparison.md
rollouts/examples/: controlled_search_demo.py  oracle_analysis.py  search_agent.py  search_calculator_demo.py  simple_calculator.py  simple_search_demo.py  tmux_calculator_demo.py
rollouts/rollouts/: __init__.py  agents.py  checkpoints.py  dtypes.py  evaluation.py  providers.py
rollouts/rollouts/cli/: __init__.py  agent_cli.py
rollouts/rollouts/environments/: __init__.py  advanced_search.py  base.py  binary_search.py  calculator.py  no_tools.py
rollouts/rollouts/evaluation/: __init__.py
rollouts/rollouts/inference/jax/: tok_weights.py
rollouts/scripts/: debug_tool_schemas.py  refactor_providers.py
rollouts/tests/: ablation_test.py  debug_gemini_functions.py  debug_stream_parsing.py  proposed_fix.py  simple_calculator_env.py  test_rollout_routing.py  two_tool_test.py
rollouts/tests/regression/: debug_stream_parsing.py  proposed_fix.py  smoke_gemini.py
scripts/: deploy_nano_ndif.py  oracle_rollouts_clean.py  smoke_nano_ndif.py
shared/: logging.md  logging_config.py  logging_full_transcript.txt  logging_transcript.txt  pyproject.toml  ssh_foundation.py  test_ssh_foundation.py
trainer/: arch.md
(+504 files in other folders)
