[tool.uv.workspace]
members = ["bifrost", "broker", "rollouts"]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'"
]
conflicts = [
    [
        { extra = "interp" },
        { extra = "outlier" }
    ]
]

[project]
name = "llm-workbench"
version = "0.1.0"
description = "Complete toolkit for GPU-accelerated machine learning workflows"
requires-python = ">=3.10"
# Default: Core tools only (no ML dependencies to avoid conflicts)
dependencies = [
    "rollouts",
    "broker",
    "bifrost"
]

[project.optional-dependencies]
# Lightweight local development - no ML dependencies
local = [
    "rollouts",
    "broker", 
    "bifrost"
]

# Outlier analysis features - nnsight without vllm conflict
outlier = [
    "rollouts",
    "broker", 
    "bifrost",
    "nnsight>=0.4",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "datasets>=4.0.0",
    "pyarrow>=21.0.0",
    "triton>=3.4.0; sys_platform == 'linux'",
    "huggingface-hub>=0.34.4",
    "numpy<2.0.0",
    "requests>=2.28.0",
    "pathlib"
]

[tool.uv.sources]
rollouts = { workspace = true }
broker = { workspace = true }
bifrost = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = []  # Meta-package - no code in root
