[project]
name = "gpu-broker-minimal"
version = "0.1.0"
description = "Minimal GPU cloud broker with RunPod SSH output capture fix"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "paramiko>=3.0.0",
    "asyncssh>=2.14.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
broker = "gpu_broker_minimal.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"