[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leyline"
version = "0.1.0"
description = "A tiny Python framework for orchestrating inference workers behind NAT/pre-emptible nodes"
readme = "README.md"
authors = [{name = "Leyline Contributors"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.104.0",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.scripts]
leyline = "leyline.cli:main"
leyline-controller = "leyline.cli:run_controller"
leyline-worker = "leyline.cli:run_worker"

[project.urls]
Homepage = "https://github.com/your-org/leyline"
Repository = "https://github.com/your-org/leyline"

[tool.setuptools.packages.find]
where = ["."]
include = ["leyline*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
