[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rollouts"
version = "0.1.0"
description = "A clean agent framework"
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "dacite>=1.8.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rollouts*"]
exclude = ["examples*"]